tdf#148040: allow external link update for css.sheet.FunctionAccess

Change-Id: I2608c10fd3354e90049d1c7315895922c865a648